src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Address_1_PO_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the &apos;Mailing Address&apos; on the contact record is a PO Box address type.</description>
        <label>PO Box?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_2_PO_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if the &apos;Other Address&apos; on the contact is a PO Box address type.</description>
        <label>PO Box?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Asst. Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Birthdate_Apttus__c</fullName>
        <description>Apttus Template field</description>
        <formula>Birthdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthdate Apttus</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <description>This is a custom field used to store the value coming from the Lead birthdate field</description>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the contact is active or no longer relevant to the account</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Territory__c</fullName>
        <formula>Account.Territory_Code_s__c</formula>
        <label>Contact Territory Code(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <description>Specifies the the country that the contact originates from.</description>
        <label>Country of Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Phone__c</fullName>
        <description>CORE - Allows users to capture an additional Direct contact number</description>
        <label>Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <description>Captures the area of study that the contact is interested in or involved with.</description>
        <label>Discipline of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Allied Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anatomy &amp; Physiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anthropology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology &amp; Microbiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Sciences &amp; Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deaf Studies &amp; Deaf Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS &amp; Fire Science (Brady)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &amp; Interior Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geology &amp; Oceanography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Kinesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History, Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interdisciplinary Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Studies &amp; Paralegal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mathematics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Samples__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies, when checked, that Samples should never be sent to the contact.</description>
        <label>Do Not Send Samples</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Type_Detail_del__c</fullName>
        <label>Engagement Type Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Value1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engagement_Type_del__c</fullName>
        <label>Engagement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer and Engaged Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent and Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethnic_Origin__c</fullName>
        <description>Field to capture the Contact&apos;s ethnicity.</description>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coloured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Faculty_Advisor_Status__c</fullName>
        <description>US FS: Used to specify whether the contact should be considered to be appointed as Faculty Advisor.</description>
        <label>Faculty Advisor Status</label>
        <picklist>
            <picklistValues>
                <fullName>Nominated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Language__c</fullName>
        <description>Field to capture the Contacts first language.</description>
        <label>First Language</label>
        <picklist>
            <picklistValues>
                <fullName>Afrikaans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>isiNdebele</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>isiXhosa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>isiZulu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sesotho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>siSwati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tshivenda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xitsonga</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Field to capture the Contacts gender.</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>CTIMGI: Field to capture the home phone number of the Contact record.</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <description>Migration only field</description>
        <externalId>true</externalId>
        <label>ImportID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing Lists/Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Organisations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online/Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Lists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telesales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-Ins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <description>Used to specify if the Contact&apos;s marital status</description>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widowed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Used to capture the Market of the Contact Creator</description>
        <label>Market</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketformula__c</fullName>
        <description>Used to tag the Contact with the creator&apos;s market. System populated.</description>
        <formula>TEXT( CreatedBy.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Field to capture the Contacts middle name.</description>
        <label>Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Apttus__c</fullName>
        <formula>MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Apttus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Last_Updated__c</fullName>
        <description>Used to track when fields were last updated on the mobile app.</description>
        <label>Mobile Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>National_Identity_Number__c</fullName>
        <description>Encrypted field: used to capture the Contacts National Identity Number.</description>
        <label>National Identity Number</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Other_Languate__c</fullName>
        <description>Field is used if the value of other is selected in &apos;First Language&apos;</description>
        <label>Other Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <description>Encrypted field - used to capture the contacts passport number</description>
        <label>Passport Number</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Pearson_Author__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox=TRUE if there is an Authored Product record where the user has specified that the user is a Pearson Author</description>
        <label>Pearson Author</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Apttus__c</fullName>
        <description>Apttus Template field need for contact template</description>
        <formula>Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Apttus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Address__c</fullName>
        <description>Used in US FS Order Management, if None is selected, then the Contacts address will be used as the address to which the order should be sent</description>
        <label>Preferred Address</label>
        <picklist>
            <picklistValues>
                <fullName>Mailing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Communication__c</fullName>
        <description>Field to capture the Contact&apos;s preferred method of communication</description>
        <label>Preferred Method of Communication</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile/Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Number__c</fullName>
        <description>Used to specify which number the Contact should be contacted on where multiple contact numbers are provided</description>
        <label>Primary Phone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Selling_Account__c</fullName>
        <description>Formula field to display the Primary Selling Account of the Contact&apos;s &apos;Primary&apos; Account (Primary is the account displayed in Account Name on the Contact Record)</description>
        <formula>Account.Primary_Selling_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Selling Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Detail__c</fullName>
        <label>Role Detail</label>
        <picklist>
            <controllingField>Role__c</controllingField>
            <picklistValues>
                <fullName>Adjunct Faculty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assc. Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asst. Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chancellor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Curriculum Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Learning Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emeritus Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaching Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visiting Lecturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bookstore Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Chairperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab Technician/Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Educator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <description>Field to record the School that the Contact currently attends or did attend before attending university.</description>
        <label>School</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <description>Used to capture a contacts second email address.</description>
        <inlineHelpText>Please populate this field with the contacts secondary email address such as a work email address.</inlineHelpText>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Special_Requirements_Description__c</fullName>
        <description>Field provided to enable the user to capture the contacts specific special requirements</description>
        <label>Special Requirements Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Requirements__c</fullName>
        <description>Used to identify if the student has any specialist requirements .</description>
        <label>Special Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Special Requirements</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TempRefID__c</fullName>
        <description>[HH- Remove before deployment] Temp to support Data Migration from Dev2</description>
        <externalId>true</externalId>
        <label>Temp-RefID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Year_of_Graduation__c</fullName>
        <description>Capture the year that the contact graduated their School</description>
        <label>Year of Graduation</label>
        <picklist>
            <picklistValues>
                <fullName>1950</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1951</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1952</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1953</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1954</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1955</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1956</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1957</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1958</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1959</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1960</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1961</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1962</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1963</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1964</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1965</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1966</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1967</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1968</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1969</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1970</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1971</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1972</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1973</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1974</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1975</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1976</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1977</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1978</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1979</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isleadConvertedContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to check if contact is created by lead conversion.</description>
        <label>isleadConvertedContact</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>